# culibot

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  post-create.sh
client/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.d.ts  vite.config.js  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/libs/: api-client.ts  app-route.ts
server/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
server/culi/: api.py  config.py  context.py  exception_handlers.py  exceptions.py  logging.py  main.py  middlewares.py  openapi.py  postgres.py  routing.py
server/culi/auth/: dependencies.py  endpoints.py  models.py  scope.py  service.py
server/culi/auth/schemas/: auth.py
server/culi/auth_link/: endpoints.py  schemas.py  service.py
server/culi/auth_link/email_templates/: auth_link.html
server/culi/common/: cors.py  crypto.py  email.py  http.py  jwt.py  routing.py  schemas.py  services.py
server/culi/common/db/: postgres.py
server/culi/common/db/models/: base.py
server/culi/email/: renderer.py  sender.py
server/culi/email/email_templates/: base.html
server/culi/health/: endpoints.py
server/culi/integrations/google/: endpoints.py  schemas.py  service.py
server/culi/models/: auth_link.py  oauth2_token.py  user.py
server/culi/oauth2/: sub_type.py
server/culi/user/: oauth_service.py
server/culi/user/endpoints/: __init__.py  user.py
server/culi/user/schemas/: user.py
server/culi/user/services/: user.py
server/migrations/: env.py  script.py.mako
server/migrations/versions/: 2024-10-04-0011_init_user.py  2024-10-04-1336_oauth_accounts.py  2024-10-04-1341_oauth_accounts_refresh_token_expires_at.py
server/scripts/: db.py
(+19 files in other folders)
