[tool.poetry]
name = "culi"
version = "0.1.0"
description = ""
authors = ["Dai Nguyen Trong <ngtrdai@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"
pydantic-extra-types = "^2.9.0"
sqlalchemy = "^2.0.35"
makefun = "^1.15.6"
alembic = "^1.13.3"
sqlalchemy-utils = "^0.41.2"
typer = "^0.12.5"
structlog = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
