[tool.poetry]
name = "culi"
version = "0.1.0"
description = ""
authors = ["Dai Nguyen Trong <ngtrdai@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"
pydantic-extra-types = "^2.9.0"
sqlalchemy = "^2.0.35"
makefun = "^1.15.6"
alembic = "^1.13.3"
sqlalchemy-utils = "^0.41.2"
typer = "^0.12.5"
structlog = "^24.4.0"
pyjwt = "^2.6.0"
jinja2 = "^3.1.4"
resend = "^2.4.0"
safe-redirect-url = "^0.1.1"
python-multipart = "^0.0.12"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
httpx-oauth = "^0.15.1"
authlib = "^1.3.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
  extend-select = ["I", "UP", "T20"]
  ignore = [
      "F841", # remove unused variables
  ]

[tool.ruff.lint.per-file-ignores]
  "migrations/*" = [
      "F401", # remove unused import
  ]
  "scripts/*" = [
      "T20"
  ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
